istio/virtual-service-userapi-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: userapi-service
        subset: v1
        port:
          number: 3000
      weight: 50
    - destination:
        host: userapi-service
        subset: v2
        port:
          number: 3000
      weight: 50
